--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <div class="bg-black text-white font-medium">
-      <div class="container mx-auto  md:w-9/12 w-full py-1.5 text-center">
+      <div class="container mx-auto md:w-9/12 w-full py-1.5 text-center md:px-0
+        px-[20px]">
         <p class="text-sm md:text-base">
           To celebrate Spense's launch, we will be waiving all fees for the entire
           month of April.
@@ -20,7 +21,8 @@
      
     </div>
     <header class="bg-red-50">
-      <div class="container mx-auto md:w-9/12 w-full py-4 md:py-8"></div>
+      <div class="container mx-auto md:w-9/12 w-full py-4 md:py-8 md:px-0
+        px-[20px]"></div>
         <nav class="text-right">
           <div class="flex flex-row justify-between items-center">
             <div class="font-bold text-lg">spense</div>
@@ -133,6 +135,8 @@
           gap-x-4
           py-8
           items-center
+		  md:px-0
+        px-[20px]
         "
       >
         <img src="./Assets/Facebook Logo.png" alt="" />
@@ -184,7 +188,8 @@
         </div>
       </div>
     </section>
-    <section class="container mx-auto md:w-9/12 w-full my-8">
+    <section class="container mx-auto md:w-9/12 w-full my-8 md:px-0
+        px-[20px]">
       <div class="grid md:grid-cols-2 md:gap-x-4 grid-rows-2 gap-y-2 rounded">
         <div>
           <img src="./Assets/Text Editor.png" />
@@ -204,7 +209,8 @@
       </div>
     </section>
     <footer class="bg-black text-white">
-      <div class="container mx-auto md:w-9/12 w-full py-8">
+      <div class="container mx-auto md:w-9/12 w-full py-8 md:px-0
+        px-[20px]">
         <div
           class="
             grid
