--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   </head>
   <body>
     <div class="bg-black text-white font-medium">
-      <div class="container mx-auto md:w-9/12 w-full py-1.5 text-center md:px-0
-        px-[20px]">
+      <div class="container mx-auto  md:w-9/12 w-11/12 py-1.5 text-center">
         <p class="text-sm md:text-base">
           To celebrate Spense's launch, we will be waiving all fees for the entire
           month of April.
@@ -21,8 +20,7 @@
      
     </div>
     <header class="bg-red-50">
-      <div class="container mx-auto md:w-9/12 w-full py-4 md:py-8 md:px-0
-        px-[20px]"></div>
+      <div class="container mx-auto md:w-9/12 w-11/12 py-4 md:py-8"></div>
         <nav class="text-right">
           <div class="flex flex-row justify-between items-center">
             <div class="font-bold text-lg">spense</div>
@@ -130,13 +128,11 @@
           container
           mx-auto
           md:w-9/12
-          w-full
+          w-11/12
           grid grid-cols-8
           gap-x-4
           py-8
           items-center
-		  md:px-0
-        px-[20px]
         "
       >
         <img src="./Assets/Facebook Logo.png" alt="" />
@@ -155,7 +151,7 @@
       container
       mx-auto 
         md:w-9/12
-        w-full
+        w-11/12
         bg-red-50
         rounded-lg
         md:px-[75px]
@@ -188,8 +184,7 @@
         </div>
       </div>
     </section>
-    <section class="container mx-auto md:w-9/12 w-full my-8 md:px-0
-        px-[20px]">
+    <section class="container mx-auto md:w-9/12 w-11/12 my-8">
       <div class="grid md:grid-cols-2 md:gap-x-4 grid-rows-2 gap-y-2 rounded">
         <div>
           <img src="./Assets/Text Editor.png" />
@@ -209,8 +204,7 @@
       </div>
     </section>
     <footer class="bg-black text-white">
-      <div class="container mx-auto md:w-9/12 w-full py-8 md:px-0
-        px-[20px]">
+      <div class="container mx-auto md:w-9/12 w-11/12 py-8">
         <div
           class="
             grid
